# OmegaESP32xxNVSController

./: CMakeLists.txt  idf_component.yml
examples/nvs-test/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
examples/nvs-test/main/: CMakeLists.txt  main.c  main.cpp
inc/: OmegaESP32xxNVSController.h  OmegaESP32xxNVSController.hpp
inc/OmegaESP32xxNVSController/: ESP32xxNVSController.hpp
src/: OmegaESP32xxNVSController.c  OmegaESP32xxNVSController.cpp
